# ai-desktop-pet-generator

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  development.md  integrations.md  troubleshooting.md
examples/: capybara-coder.txt
scripts/: batch20.tsv  batch_generate.sh  make_voice_sfx.py  petgen-event.sh
scripts/hooks/: antigravity-hook.sh  claude-code-hook.sh  codex-hook.sh  codex-notify-wrapper.sh  install-hooks.sh
src/petgen/: __init__.py  __main__.py  animation.py  bubble.py  cli.py  coordinator.py  datadir.py  desktop_window.py  envfile.py  eventbus.py  integrations.py  library.py  library_dialog.py  openai_common.py  openai_image.py  openai_text.py  overlay.py  personalities.py  pet_manifest.py  pomodoro.py  prompt.py  reminder.py  reminder_editor.py  reminder_list.py  reminder_nl.py  reminder_quick.py  reminder_scheduler.py  settings_dialog.py  sound.py  speak.py  spritesheet.py  store.py  theme.py  tray.py  voicepack.py
src/petgen/resources/_sfx/: ATTRIBUTION.txt
tests/: test_animation.py  test_app_windows.py  test_bubble.py  test_cli.py  test_coordinator_reminder.py  test_desktop_window.py  test_envfile.py  test_eventbus.py  test_generation_worker.py  test_integrations.py  test_library.py  test_openai_image.py  test_openai_text.py  test_pet_manifest.py  test_pomodoro.py  test_prompt.py  test_reminder.py  test_reminder_nl.py  test_reminder_scheduler.py  test_reminder_ui.py  test_settings_tools_tab.py  test_spritesheet.py  test_store.py  test_tray_coordinator.py  test_voicepack.py
