[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-desktop-pet-generator"
version = "0.1.0"
description = "Generate desktop pet spritesheets from text prompts and optional reference images."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "Pillow>=10.0.0",
  "requests>=2.31.0",
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
desktop = [
  "PySide6>=6.5",
]

[project.scripts]
petgen = "petgen.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
petgen = ["resources/_sfx/*.wav", "resources/_sfx/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
