[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-desktop-pet-generator"
version = "0.1.0"
description = "Generate desktop pet spritesheets from text prompts and optional reference images."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "Pillow>=10.0.0",
  "requests>=2.31.0",
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]
desktop = [
  "PySide6>=6.5",
  "edge-tts>=6.1",
]

[project.scripts]
petgen = "petgen.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
petgen = ["resources/_sfx/*.wav", "resources/_sfx/*.txt", "resources/*.svg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

# Lint gate kept intentionally narrow so it passes without a mass reformat:
# F (pyflakes: unused/undefined imports & names), E9 (syntax errors), and
# I (import ordering). Style rules such as line length (E501) are NOT enabled
# on purpose -- adopt them later via an explicit formatting pass.
[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["outputs", "scripts"]

[tool.ruff.lint]
select = ["F", "E9", "I"]
